--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.4.0
   url_launcher: ^6.1.12
   provider: ^6.0.5
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
